Fix dropdown hidden behind banner

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,9 @@
 
 .dropdown-active {
     display: none;
+    position: relative;
+    z-index: 10;
+    margin-top: 5px;
 }
 
 .dropdown__list {
@@ -69,6 +72,7 @@
     height: 450px;
     border-radius: 0;
     margin: 0px;
+    
 }
 
 .profile {
